--- a/work4/第四次作业.md
+++ b/work4/第四次作业.md
@@ -5,12 +5,18 @@
 林之阳 3118311071
 
 1. 选择题
+
    1. D
    2. A
    3. A B C
    4. B C D
-2. 简答题
+
+2. 
+
+3. 简答题
+
    1. 参数方法
+
       1. 通过首先给出目标函数，待定参数，可以极大的简化学习过程
       2. 优点：
          - 简单：这些算法很容易理解和解释结果
@@ -19,7 +25,9 @@
       3. 缺点
          - 约束：算法选择一种函数形式只有参数可变，这限制模型本身
          - 复杂度低：算法难以解决关系复杂的问题
+
    2. 决策树
+
       1. 通过将信息增益由大到小的属性分支依次分布，完成对位置数据的分类判断
       2. 优点：
          - 决策树易于理解和实现. 人们在通过解释后都有能力去理解决策树所表达的意义 
@@ -27,7 +35,25 @@
       3. 缺点：
          - 对特征关联性强的数据不敏感
          - 可能造成过拟合
+
    3. 计算题
 
+      1. 性别信息增益：
+         $$
+         \begin{array}{l}
+            Gain(D,sex)\\
+             = Info(D) - (\frac{{{D^{boy}}}}{D} \times Info(se{x_{boy}}) + \frac{{{D^{girl}}}}{D} \times Info(se{x_{girl}}))\\
+            {\rm{                    }} =  - ({P_A}lo{g_2}{P_A} + {P_B}lo{g_2}{P_B} + {P_C}lo{g_2}{P_C}) - ({P_{boy}}(P(B|boy)lo{g_2}P(B|boy) +  \ldots \\
+            P(C|boy)lo{g_2}P(C|boy)) + {P_{girl}}(P(A|girl)lo{g_2}P(A|girl) + P(C|girl)lo{g_2}P(C|girl)))\\
+            {\rm{                    }} = {\rm{5}}{\rm{.67}}
+            \end{array}
+         $$
+         ……依次求取最大增益为判别
+
+![decTree](.\decTree.png)
 
 
+
+   4. 编程题
+
+      
