--- a/work4/第四次作业.md
+++ b/work4/第四次作业.md
@@ -9,11 +9,10 @@
    1. D
    2. A
    3. A B C
-   4. B C D
+   4. B 
+   5. B C D
 
-2. 
-
-3. 简答题
+2. 简答题
 
    1. 参数方法
 
@@ -36,6 +35,17 @@
          - 对特征关联性强的数据不敏感
          - 可能造成过拟合
 
+
+
+
+
+
+
+
+
+
+
+
    3. 计算题
 
       1. 性别信息增益：
@@ -56,4 +66,9 @@
 
    4. 编程题
 
-      
+      对米兰大教堂不同时刻图片进行k-means聚类分析：
+
+      - 聚类个数k值决定最终通过图片RGB信息，聚类为几类，聚类数目多，则特征更多，但信息更杂乱
+      - 对于建筑与背景色差较大的图片，可以较好地通过聚类提取建筑物特征，反之则不易，比如下图米兰大教堂黄昏时刻建筑物与背景，RGB信息接近，故提取到建筑特征模糊
+
+      ![kmeans](D:\workSpace_PY\homework-Of-XJTUMachineLearning\work4\kmeans.png)
